[package]
name = "rs-moddotplot"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
ahash = "0.8.11"
indexmap = "2.9.0"
ndarray = "0.16.1"
noodles = { version = "0.96.0", features = ["fasta"] }
rayon = "1.10.0"

[[example]]
name = "ident"
path = "examples/ident.rs"

[[example]]
name = "local_ident"
path = "examples/local_ident.rs"
